# algolc

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  conanfile.py  requirements.txt
.github/workflows/: unit-tests.yml
anki/: README.md
anki/rust/: box-recursive-type.md  mut-tail-pointer.md  option-or.md  option-take.md  rev-fold-build-list.md  while-let-tuple-refs.md
anki/trees/: iterative-inorder-loop-condition.md  iterative-inorder-traversal.md
common/include/dv/: lc.hpp
cpp/: .clang-format  CMakeLists.txt  conanfile.py
cpp/problems/0001-two-sum/: solution.hpp
cpp/problems/0020-valid-parentheses/: test.cpp  (+1 more)
problems/: 0003-longest-substring-without-repeating-characters.md  0011-container-with-most-water.md  0019-remove-nth-node-from-end-of-list.md  0049-group-anagrams.md  0128-longest-consecutive-sequence.md  0142-linked-list-cycle-ii.md  0206-reverse-linked-list.md  0217-contains-duplicate.md  0238-product-of-array-except-self.md  0271-encode-and-decode-strings.md  0347-top-k-frequent-elements.md
problems/0001-two-sum/: README.md  solution.hpp  test.cpp
problems/0014-longest-common-prefix/: README.md  solution.hpp  test.cpp
problems/0020-valid-parentheses/: README.md
problems/0021-merge-two-sorted-lists/: README.md  solution.hpp  test.cpp
problems/0094-binary-tree-inorder-traversal/: README.md  solution.hpp
problems/0121-best-time-to-buy-and-sell-stock/: README.md
problems/0141-linked-list-cycle/: README.md
problems/0242-valid-anagram/: README.md
python/: pyproject.toml
rust/: Cargo.toml
scripts/: new_problem.py
(+58 files in other folders)
